# bongocat-plus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile.linux  Makefile.windows  README.md  config.json  configHope.json  package-lock.json
cats/catch/: main.cpp
cats/mania/: main.cpp
cats/osu/: main.cpp
cats/taiko/: main.cpp
cmake_modules/: FindXrandr.cmake
include/: BocAPI.hpp  RobotoMonoBold.hpp  audio.hpp  global.hpp  header.hpp  helper.hpp  input.hpp  lua.hpp  sfml.hpp  sprite.hpp  window.hpp
src/: BocAPI.cpp  audio.cpp  custom.cpp  data.cpp  helper.cpp  helpers.cpp  input.cpp  main.cpp  sprite.cpp  stubs.lua  test.lua  window.cpp
src/custom/: Osu.cpp  OsuCatch.cpp  OsuMania.cpp  OsuTaiko.cpp
